--- a/grid.css
+++ b/grid.css
@@ -27,12 +27,13 @@ body {
 
 .wrapper {
 	display: grid;
-	grid-template-columns: 3fr 1fr 3fr 3fr 3fr 1fr;
-	min-height: 100vh;
+	grid-template-columns: 4fr 1fr 4fr 4fr 4fr 1fr;
+	background: #dedede;
+	height: 100vh;
 }
 
 .side-top img {
-	border: .5rem solid rgba(0, 0, 0, 0.2)
+	border: .25rem solid rgba(255, 255, 255, 0.2);
 }
 
 .sidebar {
@@ -42,11 +43,10 @@ body {
 
 .projects {
 	display: grid;
-	grid-template-rows: 1fr 2fr 2fr 1fr;
+	grid-template-rows: 1fr 3fr 3fr 1fr;
 }
 
 .projects > div:nth-child(odd) {
-	background: #ffb7b7;
 }
 
 .side-top{
@@ -69,6 +69,8 @@ body {
 .sidebar .side-bottom {
 	text-align: center;
 	vertical-align: text-bottom;
+	color: #fff;
+	text-shadow: 0px 2px 2px rgba(0,0,0,0.2);
 }
 
 .contact-me {
@@ -81,4 +83,56 @@ body {
 .side-bottom .contact-fonts .fa {
 	padding: .25em;
 	font-size: 1.5em;
+}
+
+.projects-header, .copyright-footer {
+	text-align: center;
+	text-shadow: 0px 1px 2px rgba(0,0,0,0.2);
+}
+
+.project-card-wrapper {
+	perspective: 1000px; 
+}
+
+.project-card p {
+	margin: 0;
+}
+
+.project-card {
+	text-align: center;
+	color: black;
+	margin: 5%;
+	height: 90%;
+	width: 90%;
+	transition: all 0.6s ease;
+	transform-style: preserve-3d;
+	position: relative;
+}
+
+.project-card:hover {
+	transform: rotateY(180deg);
+}
+
+.front .top-img {
+	height: 70%;
+	background: blue;
+	border-radius: 3px;
+}
+
+.front, .back {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	backface-visibility: hidden;
+	background: #fff;
+	border-radius: 3px;
+	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.back {
+	transform: rotateY(180deg);
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
