--- a/grid.css
+++ b/grid.css
@@ -13,7 +13,7 @@
 }
 
 .wrapper > .sidebar {
-	background: #c43235;
+	background: #68C2AC;
 }
 
 html {
@@ -25,7 +25,7 @@ body {
 	font-family: 'Lato', sans-serif;
 }
 
-h1 {
+h1, h2 {
 	margin: 0;
 }
 
@@ -38,6 +38,7 @@ h1 {
 	top: 50%;
 	left: 50%;
 	transform: translateX(-50%) translateY(-50%);
+	font-size: 3vw;
 }
 
 .footer p {
@@ -47,7 +48,7 @@ h1 {
 .wrapper {
 	display: grid;
 	grid-template-columns: 4fr 1fr 4fr 4fr 4fr 1fr;
-	background: #dedede;
+	background: #CFD6DE;
 }
 
 .side-top img {
@@ -57,6 +58,16 @@ h1 {
 .sidebar {
 	display: grid;
 	grid-template-rows: 2fr 2fr 1fr 1fr;
+}
+
+.sidebar-link {
+	color: #FDFDFE;
+	transition: all 0.3s ease 0s;
+}
+
+.sidebar-link:hover {
+	text-shadow: 0px 7px 10px rgba(255, 255, 255, 0.3);
+	transform: translateY(-4px);
 }
 
 .projects {
@@ -79,7 +90,7 @@ h1 {
 
 .side-top img {
 	border-radius: 50%;
-	max-height: 75%;
+	max-height: 85%;
 }
 
 .contact-fonts{
@@ -89,8 +100,9 @@ h1 {
 .sidebar .side-bottom {
 	text-align: center;
 	vertical-align: text-bottom;
-	color: #fff;
-	text-shadow: 0px 2px 2px rgba(0,0,0,0.2);
+	color: #FDFDFE;
+	text-shadow: 0px 2px 2px rgba(0,0,0,0.35);
+	font-size: 1.35vw;
 }
 
 .contact-me {
@@ -107,7 +119,8 @@ h1 {
 
 .projects-header, .copyright-footer {
 	text-align: center;
-	text-shadow: 0px 1px 2px rgba(0,0,0,0.2);
+	text-shadow: 0px 1px 2px rgba(0,0,0,0.5);
+	color: #FDFDFE;
 }
 
 .project-card-wrapper {
@@ -120,7 +133,6 @@ h1 {
 
 .project-card {
 	text-align: center;
-	color: black;
 	margin: 5%;
 	height: 90%;
 	width: 90%;
@@ -148,7 +160,7 @@ h1 {
 	width: 100%;
 	height: 100%;
 	backface-visibility: hidden;
-	background: #fff;
+	background: #FDFDFE;
 	border-radius: 3px;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
@@ -156,6 +168,7 @@ h1 {
 
 .back {
 	transform: rotateY(180deg);
+	-webkit-transform: rotateY(180deg) translateZ(1px);
 	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
@@ -177,23 +190,48 @@ h1 {
 
 .card-top-section p {
 	font-size: 1.5vw;
+	text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
 }
 
 .card-top-circle {
 	position: absolute;
 	width: 35%;
-	background: #dedede;
-	background-image: url('images/drink.png');
+	background: #BEC9D2;
  	background-size: cover;
     background-position: top;
 	border-radius: 50%; 
 	border-style: solid;
-	border-width: 1px;
-	border-color: #cf5a5e;
+	border-width: 2px;
+	border-color: #67c3ac;
 	top: 45%;
 	left: 50%;
 	transform: translateX(-50%) translateY(-50%);
 	backface-visibility: hidden;
+	box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+}
+
+.bartender-app-icon {
+	background-image: url('images/drink.png');
+}
+
+.phone-app-icon {
+	background-image: url('images/phone.png');
+}
+
+.verbalize-icon {
+	background-image: url('images/verbalize.png');
+}
+
+.database-icon {
+	background-image: url('images/database.png');
+}
+
+.css-icon {
+	background-image: url('images/css.png');
+}
+
+.website-icon {
+	background-image: url('images/website.png');
 }
 
 .card-top-circle:after {
@@ -207,6 +245,7 @@ h1 {
 	bottom: 0;
 	width: 100%;
 	backface-visibility: hidden;
+	color: #586880;
 }
 
 .card-bottom-section {
@@ -222,4 +261,138 @@ h1 {
 	padding: 8%;
 	font-size: 1vw; 
 	font-family: 'Open Sans', sans-serif;
+	color: #586880;
+	font-weight: lighter;
 }
+
+.card-back-title {
+	position: relative;
+	height: 16%; 
+	background: #68C2AC;
+	border-radius: 3px 3px 0px 0px; 
+}
+
+.card-back-title p {
+	position: absolute;
+	bottom: 15%;
+	width: 100%;
+	font-size: 1.5vw;
+	font-family: 'Lato', sans-serif;
+	font-weight: bold;
+	color: #FDFDFE;
+	text-shadow: 0px 1px 2px rgba(0,0,0,0.4);
+}
+
+.card-back-description {
+	position: relative;
+	height: 48%; 
+}
+
+.card-back-description p{
+	padding: 3%;
+	font-size: .95vw; 
+	font-family: 'Open Sans', sans-serif;
+	color: #586880;
+	font-weight: lighter;
+}
+
+.card-back-skills-row {
+	position: relative;
+	height: 10%; 
+}
+
+.skill-box{
+	border-style: solid;
+	border-radius: 4%;
+	border-color: #68C2AC;
+	background: #68C2AC;
+	border-width: 1px;
+	display: inline-flex;
+	font-size: 1vw; 
+	font-family: 'Open Sans', sans-serif;
+	color: #FDFDFE;
+	font-weight: lighter;
+	padding: 0 2% 0 2%;
+	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15);
+}
+
+.card-back-bottom {
+	position: relative;
+	height: 16%;
+}
+
+.card-back-bottom a{
+	text-decoration: none;
+	color: #68C2AC;
+	margin: 0;
+}
+
+.card-back-bottom .card-back-bottom-note {
+	padding-top: 3%; 
+	font-size: .9vw; 
+	font-family: 'Open Sans', sans-serif;
+	color: #68C2AC;
+	text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+}
+
+.card-back-bottom .git-link {
+	position: absolute;
+	left: 10%;
+	bottom: 24%;
+	text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
+	transition: all 0.3s ease 0s;
+}
+
+.card-back-bottom .git-link:hover {
+	text-shadow: 0px 7px 10px rgba(104, 194, 172, 0.6);
+	transform: translateY(-4px);
+}
+
+.card-back-bottom .project-link {
+	position: absolute;
+	right: 10%;
+	bottom: 24%;
+	font-size: 1.05vw;
+    border-radius: 45px;
+    border: 1px solid #68C2AC;
+    padding: 2px 10px 2px 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+    font-family: 'Open Sans', sans-serif;
+    transition: all 0.3s ease 0s;
+}
+
+.card-back-bottom .project-link:hover {
+	background-color: #68C2AC;
+	box-shadow: 0px 7px 10px rgba(104, 194, 172, 0.6);
+	color: #FDFDFE;
+	transform: translateY(-4px);
+	border-color: #68C2AC;
+}
+
+.card-back-bottom .project-link p:hover {
+	color: #FDFDFE;
+}
+
+.fa-github {
+	font-size: 2vw;
+	padding-top: 3%;
+}
+
+.fa-code {
+	font-size: 2vw;
+	padding-left: 3%;
+}
+
+.fa-git {
+	margin-top: 10%;
+	font-size: 1.5vw;
+}
+
+.github-icon {
+
+}
+
+.project-link-button {
+
+}
+
