--- a/grid.css
+++ b/grid.css
@@ -369,6 +369,27 @@ h1, h2 {
 	border-color: #68C2AC;
 }
 
+.card-back-bottom .project-link-left {
+	position: absolute;
+	left: 10%;
+	bottom: 24%;
+	font-size: 1.05vw;
+    border-radius: 45px;
+    border: 1px solid #68C2AC;
+    padding: 2px 10px 2px 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+    font-family: 'Open Sans', sans-serif;
+    transition: all 0.3s ease 0s;
+}
+
+.card-back-bottom .project-link-left:hover {
+	background-color: #68C2AC;
+	box-shadow: 0px 7px 10px rgba(104, 194, 172, 0.6);
+	color: #FDFDFE;
+	transform: translateY(-4px);
+	border-color: #68C2AC;
+}
+
 .card-back-bottom .project-link p:hover {
 	color: #FDFDFE;
 }
