--- a/css/grid.css
+++ b/css/grid.css
@@ -341,6 +341,32 @@ h1, h2 {
 	transform: translateY(-4px);
 }
 
+.card-back-bottom .android-link {
+	position: absolute;
+	left: 12%;
+	bottom: 24%;
+	text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
+	transition: all 0.3s ease 0s;
+}
+
+.card-back-bottom .android-link:hover {
+	text-shadow: 0px 7px 10px rgba(104, 194, 172, 0.6);
+	transform: translateY(-4px);
+}
+
+.card-back-bottom .iphone-link {
+	position: absolute;
+	right: 12%;
+	bottom: 24%;
+	text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
+	transition: all 0.3s ease 0s;
+}
+
+.card-back-bottom .iphone-link:hover {
+	text-shadow: 0px 7px 10px rgba(104, 194, 172, 0.6);
+	transform: translateY(-4px);
+}
+
 .card-back-bottom .project-link {
 	position: absolute;
 	right: 10%;
@@ -388,6 +414,16 @@ h1, h2 {
 }
 
 .fa-github {
+	font-size: 2vw;
+	padding-top: 3%;
+}
+
+.fa-android {
+	font-size: 2vw;
+	padding-top: 3%;
+}
+
+.fa-apple {
 	font-size: 2vw;
 	padding-top: 3%;
 }
