--- a/css/mobile.css
+++ b/css/mobile.css
@@ -317,7 +317,21 @@ a {
     text-shadow: 4px 8px 16px rgba(0, 0, 0, 0.25);
 }
 
+.project-links-bottom .android-link {
+    position: absolute;
+    left: 12%;
+    bottom: 30%;
+    text-shadow: 4px 8px 16px rgba(0, 0, 0, 0.25);
+    font-size: 7vw;
+}
 
+.project-links-bottom .iphone-link {
+    position: absolute;
+    right: 12%;
+    bottom: 30%;
+    text-shadow: 4px 8px 16px rgba(0, 0, 0, 0.25);
+    font-size: 7vw;
+}
 
 .project-links-bottom a {
     text-decoration: none;
